# mythonomicon

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/mythos_engine/: mythos_engine.cpp  mythos_engine.hpp
src/mythos_engine/rendering/: rendering_pipeline.cpp  rendering_pipeline.hpp
src/mythos_engine/rendering/display_management/: display_manager.cpp  display_manager.hpp
src/utils/type_registry/: type_registry.cpp  type_registry.hpp
